update: updated the README.md file